# silence-operator

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MODULE.bazel  Makefile  PROJECT  README.md  go.mod  go.sum  index.html  index.yaml
.github/workflows/: goreleaser.yaml  helm-release.yml  lint.yml  publish-release.yml  release-please.yaml  release.yaml
api/v1alpha1/: BUILD.bazel  groupversion_info.go  matcher.go  silence_types.go  zz_generated.deepcopy.go
charts/silence-operator/: Chart.yaml  README.md  values.yaml
charts/silence-operator/templates/: _helpers.tpl  clusterRole.yaml  clusterRoleBinding.yaml  crd.yaml  deployment.yaml  role.yaml  roleBinding.yaml  service.yaml  serviceAccount.yaml  serviceMonitor.yaml
cmd/: BUILD.bazel  main.go  silence-operator.go
config/crd/: kustomization.yaml
config/crd/bases/: monitoring.coreos.com_silences.yaml
config/default/: kustomization.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/rbac/: kustomization.yaml  leader_election_role.yaml  silence_admin_role.yaml  silence_editor_role.yaml
internal/alertmanager/: client.go
internal/controller/: silence_controller.go  silence_controller_test.go  suite_test.go
manifests/crd/: kustomization.yaml
manifests/crd/bases/: monitoring.coreos.com_silences.yaml
manifests/default/: metrics_service.yaml
manifests/manager/: manager.yaml
manifests/prometheus/: monitor.yaml
manifests/rbac/: role.yaml  silence_editor_role.yaml  silence_viewer_role.yaml
manifests/samples/: monitoring_v1alpha1_silence.yaml
pkg/alertmanager/: BUILD.bazel
pkg/config/: BUILD.bazel  config.go
pkg/config/testdata/: config.yaml
pkg/controller/: BUILD.bazel  silence_controller.go
pkg/operator/: BUILD.bazel  operator.go
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: BUILD.bazel
test/utils/kind/: BUILD.bazel  kind.go
utils/kind/: BUILD.bazel  kind.go
