module(
    name = "silence_operator",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "gazelle", version = "0.43.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_go_openapi_strfmt",
    "com_github_google_uuid",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_prometheus_alertmanager",
    "com_github_rs_zerolog",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_kind",
    "io_k8s_utils",
)

#go_deps.gazelle_override(
#    directives = [
#        "gazelle:proto disable",
#    ],
#
#    path = "k8s.io/apimachinery",
#)

go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable",
    ],
)
