load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["silence-operator.go"],
    importpath = "github.com/silence-operator/silence-operator/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/operator",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "silence_operator",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
