load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "operator",
    srcs = ["operator.go"],
    importpath = "github.com/silence-operator/silence-operator/pkg/operator",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//pkg/alertmanager",
        "//pkg/controller",
        "@com_github_go_logr_logr//:logr",
        "@com_github_go_logr_zerologr//:zerologr",
        "@com_github_rs_zerolog//:zerolog",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/config",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/filters",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
        "@io_k8s_utils//ptr",
    ],
)
