load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kind_lib",
    srcs = ["kind.go"],
    importpath = "github.com/silence-operator/silence-operator/utils/kind",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_rs_zerolog//log:go_default_library",
        "@io_k8s_sigs_kind//cmd/kind/app",
    ],
)

go_binary(
    name = "kind",
    embed = [":kind_lib"],
    visibility = ["//visibility:public"],
)
